--- a/src/angular/angular-tour-of-heroes/src/app/taskList/task-list.component.html
+++ b/src/angular/angular-tour-of-heroes/src/app/taskList/task-list.component.html
@@ -10,9 +10,10 @@
     <li>Amélioration suggérée : mettre en gras et en majuscule les tâches ajoutés.</li>
   </ul>
 
+
   <input [(ngModel)]="newTask" placeholder="Ajouter une tâche" />
-  <button (click)="addTask()">Ajouter</button>
-  <button>Suprimer toutes les tâches</button>
+  <button click="addTask()">Ajouter</button>
+  <button>Supprimer toutes les tâches</button>
   <ul>
     <li *ngFor="let task of tasks; let i = index">
       {{ task }}
