--- a/src/angular/angular-tour-of-heroes/src/app/taskList/task-list.component.html
+++ b/src/angular/angular-tour-of-heroes/src/app/taskList/task-list.component.html
@@ -9,7 +9,7 @@
 
   <input [(ngModel)]="newTask" placeholder="Ajouter une tâche" />
 
-  <button click="addTask()">Ajouter</button>
+  <button onclick="addTask()">Ajouter</button>
 
   <button>Supprimer toutes les tâches</button>
 
