--- a/src/angular/angular-tour-of-heroes/src/app/app.component.html
+++ b/src/angular/angular-tour-of-heroes/src/app/app.component.html
@@ -329,7 +329,7 @@
       </g>
     </svg>
 
-    <span>{{ title }} app is running!</span>
+    <span>{{ title }} app est activée!</span>
   </div>
 
   <div class="card-container">
